--- a/sunset-courier-services/package.json
+++ b/sunset-courier-services/package.json
@@ -12,34 +12,39 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.0.1",
-    "@angular/cdk": "^9.2.2",
+    "@angular/cdk": "^11.0.0",
     "@angular/common": "~10.0.1",
     "@angular/compiler": "~10.0.1",
     "@angular/core": "~10.0.1",
     "@angular/flex-layout": "^9.0.0-beta.29",
     "@angular/forms": "~10.0.1",
-    "@angular/material": "^9.2.2",
+    "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~10.0.1",
     "@angular/platform-browser-dynamic": "~10.0.1",
     "@angular/router": "~10.0.1",
+    "@nebular/eva-icons": "7.0.0",
+    "@nebular/theme": "^7.0.0",
     "@ngmodule/material-carousel": "^0.6.0",
     "@nicky-lenaers/ngx-scroll-to": "^9.0.0",
+    "angular-mydatepicker": "^0.10.2",
+    "eva-icons": "^1.1.2",
     "rxjs": "~6.5.4",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1000.0",
-    "@angular/cli": "~10.0.0",
+    "@angular-devkit/build-angular": "^0.1100.1",
+    "@angular/cli": "^11.2.1",
     "@angular/compiler-cli": "~10.0.1",
     "@angular/language-service": "~10.0.1",
+    "@schematics/angular": "~10.0.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "karma": "^6.1.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~3.3.0",
