--- a/sunset-courier-services/package.json
+++ b/sunset-courier-services/package.json
@@ -11,17 +11,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.1",
+    "@angular/animations": "~12.0.0-next.1",
     "@angular/cdk": "^11.0.0",
-    "@angular/common": "~10.0.1",
-    "@angular/compiler": "~10.0.1",
-    "@angular/core": "~10.0.1",
+    "@angular/common": "~12.0.0-next.1",
+    "@angular/compiler": "~12.0.0-next.1",
+    "@angular/core": "~12.0.0-next.1",
     "@angular/flex-layout": "^9.0.0-beta.29",
-    "@angular/forms": "~10.0.1",
-    "@angular/material": "^9.2.4",
-    "@angular/platform-browser": "~10.0.1",
-    "@angular/platform-browser-dynamic": "~10.0.1",
-    "@angular/router": "~10.0.1",
+    "@angular/forms": "~12.0.0-next.1",
+    "@angular/material": "^11.2.1",
+    "@angular/platform-browser": "~12.0.0-next.1",
+    "@angular/platform-browser-dynamic": "~12.0.0-next.1",
+    "@angular/router": "~12.0.0-next.1",
     "@nebular/eva-icons": "7.0.0",
     "@nebular/theme": "^7.0.0",
     "@ngmodule/material-carousel": "^0.6.0",
@@ -35,8 +35,8 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1100.1",
     "@angular/cli": "^11.2.1",
-    "@angular/compiler-cli": "~10.0.1",
-    "@angular/language-service": "~10.0.1",
+    "@angular/compiler-cli": "~12.0.0-next.1",
+    "@angular/language-service": "~12.0.0-next.1",
     "@schematics/angular": "~10.0.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
@@ -52,6 +52,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.9.5"
+    "typescript": "~4.1.5"
   }
 }
